apps/nginx/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nginx
  labels:
    app.kubernetes.io/name: nginx
  annotations: {}
spec:
  ingressClassName: traefik
  rules:
    - host: "nginx.local"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
  tls:
    - hosts:
        - nginx.local
      secretName: nginx-tls
